Some client libraries cannot be built with GCC 6

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: client-libs
    • None
    • 2d
    • b127

      http://mail.openjdk.java.net/pipermail/jdk9-dev/2016-June/004494.html

      Some client libraries could not be built with misleading-indentation
      and shift-negative-value warining (error) on GCC 6.1.1 .

      So I think we have to fix new warnings.

      However, some libraries (LCMS, JPEG library, and fdlibm) are imported
      from another open source project. So we should avoid compile error
      with suppressing them.

            Assignee:
            Yasumasa Suenaga
            Reporter:
            Yasumasa Suenaga
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: