8160294: Some client libraries cannot be built with GCC 6

Reviewed-by: prr, flar, erikj, kbarrett